Revision history for HTTP-Message

6.07   2015-07-09

    - Allow subclasses to override the class of parts - it used to be
      hardcoded to HTTP::Message. (Gisle Aas, RT#79239)

    - Added support for is_client_error, is_server_error to HTTP::Response
      (Karen Etheridge)

    - Added flatten interface to HTTP::Headers (Tokuhiro Matsuno, GH#5)

    - Allow PUT to pass content data via hashrefs just like with POST (Michael
      Schilli, GH#9)

    - Fix for "Content-Encoding: none" header (Gisle Aas, RT#94882)

    - Add support for HTTP status 308, defined in RFC 7238 (Olivier Mengué,
      RT#104102)

    - drop the use of "use vars" (Karen Etheridge)


_______________________________________________________________________________
2012-10-21 HTTP-Message 6.06

Gisle Aas (2):
      More forgiving test on croak message [RT#80302]
      Added test for multipart parsing

Mark Overmeer (1):
      Multipart end boundary doesn't need match a complete line [RT#79239]



_______________________________________________________________________________
2012-10-20 HTTP-Message 6.05

Gisle Aas (5):
      Updated ignores
      No need to prevent visiting field values starting with '_'
      Report the correct croak caller for delegated methods
      Disallow empty field names or field names containing ':'
      Make the extra std_case entries local to each header



_______________________________________________________________________________
2012-09-30 HTTP-Message 6.04

Gisle Aas (5):
      Updated repository URL
      Avoid undef warning for empty content
      Teach $m->content_charset about JSON
      Use the canonical charset name for UTF-16LE (and frieds)
      Add option to override the "(no content)" marker of $m->dump

Christopher J. Madsen (2):
      Use IO::HTML for <meta> encoding sniffing
      mime_name was introduced in Encode 2.21

Tom Hukins (1):
      Remove an unneeded "require"

Ville Skyttä (1):
      Spelling fixes.

chromatic (1):